--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>NeuralFlappy</title>
   </head>
   <body>
-    <canvas id='mycanvas' style='border:1px solid #000000;' keypress='onKeyPressed();'></canvas>
-    <script src='Column.js'></script>
+    <canvas id='mycanvas' style='border:1px solid #000000;'></canvas>
+    <script src='Columns.js'></script>
     <script src='Birb.js'></script>
     <script src='logic.js'></script>
   </body>
