--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
   </head>
   <body>
     <canvas id='mycanvas' style='border:1px solid #000000;'></canvas>
-    <script src='Columns.js'></script>
-    <script src='Birb.js'></script>
+    <script src='GameObjects.js'></script>
     <script src='Bot.js'></script>
-    <script src='NeuralNetwork.js'></script>
     <script src='logic.js'></script>
   </body>
 </html>
