--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <canvas id='mycanvas' style='border:1px solid #000000;'></canvas>
     <script src='GameObjects.js'></script>
     <script src='Bot.js'></script>
+    <script src='AI.js'></script>
     <script src='logic.js'></script>
   </body>
 </html>
