--- a/test2.html
+++ b/test2.html
@@ -2,7 +2,7 @@
 <head><title>tits</title></head>
 <body>
   <canvas id='myCanvas' style='border:1px solid'>bruh, your browser is shit. poor fucker</canvas>
-  <script src='AI.js'></script>
+  <script src='MachineLearning.js'></script>
   <script>
     /*function tostr(number){
       return Number(number).toFixed(4);
