--- a/test2.html
+++ b/test2.html
@@ -18,7 +18,9 @@
       return x * x + y * y;
     }
     function hyperparaboloid(values){
-      let arr = [-2, 1, 3, -4, 2.5, 1.88, -8.3, 4, 66];
+      let arr = [3, -1.5, 3, -4, 2.5, 1.88, -8.3, 4, 66, 3, -1.5, 3, -4, 2.5, 1.88, -8.3, 4, 66, 3, -1.5, 3, -4, 2.5, 1.88, -8.3,
+                 4, 66, 3, -1.5, 3, -4, 2.5, 1.88, -8.3, 4, 66, 3, -1.5, 3, -4, 2.5, 1.88, -8.3, 4, 66, 3, -1.5, 3, -4, 2.5, 1.88,
+                 -8.3, 4, 66, 3, -1.5, 3, -4, 2.5, 1.88, -8.3, 4, 66, 3, -1.5, 3, -4, 2.5, 1.88, -8.3, 4, 66];
       let sum = 0;
       for (let i = 0; i < values.length; i++){
         sum += Math.pow((values[i] - arr[i]), 2);
@@ -27,37 +29,25 @@
     }
     let imgWidth = 400;
     let canvas = document.getElementById('myCanvas');
-    canvas.width = imgWidth;
+    canvas.width = imgWidth * 2;
     canvas.height = imgWidth;
-    canvas.style.width = imgWidth;
+    canvas.style.width = imgWidth * 2;
     canvas.style.height = imgWidth;
     let g = canvas.getContext('2d');
     let n = 60;
     for (let i = 0; i < n; i++){
       for (let j = 0; j < n; j++){
-        let value = rastrigins(-10 + 20 * i / (n - 1), -10 + 20 * j / (n - 1));
+        let value = paraboloid(-10 + 20 * i / (n - 1), -10 + 20 * j / (n - 1));
         let compress = 1 / (1 + Math.exp(-value / 100));
         g.fillStyle = 'rgb(' + compress * 255 + ',0,' + (1 - compress) * 255;
         g.fillRect(i * imgWidth / (n - 1), j * imgWidth / (n - 1), imgWidth / (n - 3), imgWidth / (n - 3));
       }
     }
-    /*let ga = new RCGA(10);
-    ga.createFeature(-10, 10, 2);
-    for (let j = 0; j < 300; j++){
-      console.log('EPOCH: ' + j);
-      for (let i = 0; i < ga.getPopulation(); i++){
-        let data = ga.getCreature(i);
-        //ga.setFitness(i, -rastrigins(data[0], data[1]));
-        ga.setFitness(i, -hyperparaboloid(data));
-      }
-      ga.showData();
-      ga.newEpoch();
-    }*/
-    let points = [];
+    let points = [], fits = [];
     //let anneal = new SimulatedAnnealing(2, 5, 0.99, false);
-    let ga = new RCGA(10);
-    ga.createFeature(-10, 10, 2);
-    n = 30;
+    let ga = new RCGA(20, 0.3);
+    ga.addFeature(-10, 10, 2);
+    n = 40;
     g.beginPath();
     for (let i = 0; i < n; i++){
       let point = ga.getFittest();
@@ -67,10 +57,14 @@
       g.lineTo((point[0] + 10) * imgWidth / 20, (point[1] + 10) * imgWidth / 20);
       for (let i = 0; i < ga.getPopulation(); i++){
         let data = ga.getCreature(i);
-        let fitness = -rastrigins(data[0], data[1]);
-        console.log('fitness:' + fitness);
+        let fitness = -hyperparaboloid(data);
+        let str = 'fitness:' + fitness + ' -- ';
+        for (let i = 0; i < data.length; i++)
+          str += data[i] + ', ';
+        console.log(str);
         ga.setFitness(i, fitness);
       }
+      fits.push(ga.getFittestFitness());
       ga.newEpoch();
     }
     g.stroke();
@@ -84,6 +78,12 @@
       g.arc((points[i][0] + 10) * imgWidth / 20, (points[i][1] + 10) * imgWidth / 20, r, 0, 7);
       g.fill();
     }
+    g.strokeStyle = 'black';
+    g.beginPath();
+    for (let i = 0; i < fits.length; i++){
+      g.lineTo(i / (fits.length - 1) * imgWidth + imgWidth, 7 * imgWidth / 8 - fits[i] / fits[0] * 3 * imgWidth / 4);
+    }
+    g.stroke();
   </script>
 </body>
 </html>
