--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src='GameObjects.js'></script>
     <script src='Bot.js'></script>
     <script src='MachineLearning.js'></script>
+    <script src='FitnessProgress.js'></script>
     <script src='logic.js'></script>
   </body>
 </html>
